styles/header.css
.header {
    position: fixed;
    z-index: 10;
    height: 50px;
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
    width: 100%;
    transition: background-color 0.15s ease-in-out;
    padding-top: 10px;
    padding-bottom: 10px;
}

.labyrinth-logo {
    height: 75px;
    cursor: pointer;
}

.left-section {
    width: 180px;
    display: grid;
    grid-template-columns: 75px 1fr;
    align-content: center;
}

.right-section {
    margin-right: 30px;
    width: 300px;
    display: flex;
    flex-direction: row;
    justify-content: right;
    align-content: center;
    align-items: center;
    color: #ffffff;
    font-size: 18px;
    font-weight: 500;
}

.header-link {
    text-decoration: none;
    color: white;
}

